Ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels: # This is the label selector
      app: auth
  template: # This is the pod template
    metadata:
      labels:
        app: auth
    spec: # This is the pod spec
      containers:
        - name: auth
          image: ronit21102/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
